fixed the jumping header

--- a/Css/style.css
+++ b/Css/style.css
@@ -21,7 +21,6 @@ header {
 
 .shapeContainer {
   max-height: 100px;
-  font-size: 2.4em;
   height: 100vh;
   width: 100%;
   background-color: #cf4917;
@@ -74,7 +73,6 @@ header {
 }
 
 .something {
-
   text-align: justify;
 
 }
